(lang dune 3.8)

(using melange 0.1)

(name score-it)

(license "MIT")

(maintainers <your_name>)

(authors <your_name>)

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name score-it)
 (synopsis "Score It")
 (description "Minimal melange project"))
